cmake_minimum_required(VERSION 2.8)
project(ros2)
add_definitions(-std=c++11)
set(ros2_demo_dir ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB apps ${ros2_demo_dir}/*.cpp)
foreach(app ${apps})
  string(REPLACE "${ros2_demo_dir}/" "" app ${app})
  string(REPLACE ".cpp" "" app_name ${app})
  add_executable(${PROJECT_NAME}-${app_name} ${app})
endforeach()